<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="base_name">MatrixCalculator</string>
    <string name="app_name">Matrixulcation</string>
    <string name="spinner">Functions</string>
    <string name="equal">Equal</string>
    <string name="swap">Swap A and B</string>
    <string name="matrix_a">Matrix A:</string>
    <string name="matrix_b">Matrix B:</string>

    <string name="default_values">1,2,3\n4,5,6\n7,8,9</string>
    <string name="default_values2">9,8,7\n6,5,4\n3,2,1</string>
    <string name="dialog_result_title">Result</string>
    <string name="menu_close">Close</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>

    <string name="dialog_AxB_title">A x B = </string>
    <string name="dialog_ok">Thanks!</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_no_inverse">\nThis matrix has no inverse.\n</string>
    <string name="dialog_about_title">About</string>
    <string name="dialog_about">Matrix Calculator \nVersion 0.1</string>
    <string name="dialog_about_thanks">Thank you</string>

    <string name="dialog_result_copy">Copy to Clipboard</string>

    <string name="dialog_dimension_title">Error</string>
    <string name="dialog_dimension_message">\nMatrix dimensions must be equal.\n</string>
    <string name="dialog_dimension_dialog_ok">Close</string>

    <string name="dialog_input_error_title">Error</string>
    <string name="dialog_input_error_message">\nWrong input.\n</string>

    <string name="toast_copied">Copied</string>
    <string name="action_about">About</string>
    <string name="action_example">Example</string>
    <string name="action_settings">Settings</string>

    <string name="operation_title1">Binary Operations</string>
    <string name="operation_title2">Solve Operations</string>
    <string name="operation_title3">Test Operations</string>

    <string name="a_times_b">A x B</string>
    <string name="b_times_a">B x A</string>
    <string name="a_time_a">A x A</string>
    <string name="b_time_b">B x B</string>
    <string name="a_plus_b">A + B</string>
    <string name="a_minus_b">A - B</string>
    <string name="b_minus_a">B - A</string>
    <string name="a_time_b">A x B</string>
    <string name="transpose_a">Transpose A</string>
    <string name="transpose_b">Transpose B</string>
    <string name="test_button">Crouton Test</string>
    <!-- Crouton message -->
    <string name="crouton_message">o hey</string>
    <string name="crouton_incorrect_dimension">Invalid dimensions</string>

    <string name="home_welcome">Welcome!</string>
    <string name="home_about">This is a very simple matrix calculator. It is meant to be quick,
    simple and intuitive. This application in its entirety is completely free and licensed under
    GPL v2. Enjoy!</string>


    <string-array name="operations_array">
        <item>Home</item>
        <item>Binary Operations</item>
        <item>Decomposition Operations</item>
        <item>Test Operations</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

</resources>