<!-- Changed to RelativeLayout for better handling of screen sizes -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

    <!-- TextView for title of the first matrix -->
    <TextView
        android:id="@+id/matrix_a_textView"
        android:text="@string/matrix_a"
        android:textSize="20sp"
        android:padding="10dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/matrix_B"
        android:layout_toLeftOf="@+id/matrix_b_textView" />


    <!-- TextView for title of the second matrix -->
    <TextView
        android:id="@+id/matrix_b_textView"
        android:text="@string/matrix_b"
        android:textSize="20sp"
        android:padding="10dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/matrix_A" />


    <!-- EditText for Matrix A -->
    <EditText
        android:id="@+id/matrix_A"
        android:text="@string/default_values"
        android:layout_width="175dp"
        android:layout_height="100dp"
        android:ems="10"
        android:gravity="top"
        android:textSize="15sp"
        android:layout_below="@+id/matrix_a_textView"
        android:layout_alignParentStart="true" />

    <!-- EditText for Matrix B -->
    <EditText
        android:id="@+id/matrix_B"
        android:text="@string/default_values2"
        android:layout_width="175dp"
        android:layout_height="100dp"
        android:ems="10"
        android:gravity="top"
        android:textSize="15sp"
        android:layout_below="@+id/matrix_b_textView"
        android:layout_toRightOf="@+id/matrix_A"
        android:layout_alignParentStart="false">

        <requestFocus />
    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_time_b"
        android:id="@+id/button"
        android:layout_below="@+id/matrix_A"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/matrix_A" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_times_a"
        android:id="@+id/button3"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_minus_b"
        android:id="@+id/button5"
        android:layout_below="@+id/button3"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/button3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_minus_a"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/button5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_time_a"
        android:id="@+id/button7"
        android:layout_below="@+id/matrix_B"
        android:layout_alignEnd="@+id/matrix_B"
        android:layout_alignStart="@+id/matrix_B" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_time_b"
        android:id="@+id/button8"
        android:layout_below="@+id/button7"
        android:layout_alignStart="@+id/button7"
        android:layout_alignEnd="@+id/button7"
        android:layout_above="@+id/button5" />

    <!-- Button to get out calculation -->

</RelativeLayout>