<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="false"
    >

    <!-- Changed to RelativeLayout for better handling of screen sizes -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@drawable/abc_ab_bottom_solid_light_holo">

        <!-- TextView for title of the first matrix -->
        <TextView
            android:text="@string/matrix_a"
            android:textSize="20sp"
            android:padding="10dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/spinner_operations" />

        <!-- TextView for title of the second matrix -->
        <TextView
            android:text="@string/matrix_b"
            android:textSize="20sp"
            android:padding="10dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textView7"
            android:layout_alignEnd="@+id/matrix_B" />

        <!-- EditText for Matrix A -->
        <EditText
            android:id="@+id/matrix_A"
            android:text="@string/default_values"
            android:layout_width="175dp"
            android:layout_height="100dp"
            android:ems="10"
            android:gravity="top"
            android:textSize="15sp"
            android:layout_below="@+id/textView6"
            android:layout_toRightOf="@+id/matrix_B"
            android:layout_alignParentStart="false" />

        <!-- EditText for Matrix B -->
        <EditText
            android:id="@+id/matrix_B"
            android:text="@string/default_values2"
            android:layout_width="175dp"
            android:layout_height="100dp"
            android:ems="10"
            android:gravity="top"
            android:textSize="15sp"
            android:layout_below="@+id/textView7"
            android:layout_alignParentStart="true">

            <requestFocus />
        </EditText>

        <!-- Spinner for our list of functions -->
        <Spinner
            android:id="@+id/spinner_operations"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:drawSelectorOnTop="true"
            android:prompt="@string/spinner"
            android:layout_below="@+id/matrix_B"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/matrix_B" />

        <!-- Button to get out calculation -->
        <Button
            android:id="@+id/equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equal"
            android:layout_below="@+id/matrix_A"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/spinner_operations"
            android:layout_alignStart="@+id/matrix_A" />

    </RelativeLayout>
</FrameLayout>